support Parallel GC gc log